--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -5,6 +5,8 @@
   {% endblock %} 
   {% block nameIdentifier %}
   {% endblock %}
+  {% block creatorAffiliation %}
+  {% endblock %}
   {% block publisher %}
   {% endblock %}    
   {% block publicationYear %}
@@ -23,8 +25,13 @@
   {% endblock %}
   {% block funderName %}
   {% endblock %}
+  {% block contributorType %}
+  {% endblock %}
   {% block contributorDetails %}
   {% endblock %}
-
+  {% block contributorId %}
+  {% endblock %}
+  {% block contributorAffiliation %}
+  {% endblock %}
 #}
 
