--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {# You could remove 'free extras' from the package form like this, but we keep them for this example's tests.
-  {% block creator %}
+  {% block author %}
   {% endblock %} 
   {% block nameIdentifier %}
   {% endblock %}
@@ -23,7 +23,27 @@
   {% endblock %}
   {% block resourceType %}
   {% endblock %}
+  {% block collectedDate %}
+  {% endblock %}
+  {% block createdDate %}
+  {% endblock %}
+  {% block submittedDate %}
+  {% endblock %}
+  {% block availableDate %}
+  {% endblock %}
+  {% block withdrawnDate %}
+  {% endblock %}  
   {% block funderName %}
+  {% endblock %}
+  {% block funderId %}
+  {% endblock %}
+  {% block funderIdType %}
+  {% endblock %}
+  {% block awardNumber %}
+  {% endblock %}
+  {% block awardURI %}
+  {% endblock %}
+  {% block awardTitle %}
   {% endblock %}
   {% block contributorType %}
   {% endblock %}
@@ -32,6 +52,14 @@
   {% block contributorId %}
   {% endblock %}
   {% block contributorAffiliation %}
+  {% endblock %}
+  {% block relatedIdentifierType %}
+  {% endblock %}
+  {% block relationType %}
+  {% endblock %}
+  {% block relatedResourceType %}
+  {% endblock %}
+  {% block relatedIdentifier %}
   {% endblock %}
 #}
 
