--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_basic_fields.html
@@ -42,7 +42,7 @@
          //Clear the fields
          try{
          if( !fn || !sn || !id || !af){
-           throw new Error ('*Creator Details Cannot Be Empty');
+           throw new Error ('Creator Details Cannot Be Empty');
          }}
        catch(err){
          document.getElementById('errorMessage').innerHTML= err.message;
