--- a/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-extrafields/ckanext/extrafields/templates/package/snippets/package_metadata_fields.html
@@ -75,5 +75,15 @@
 {% endblock %}
 {% block geoLongitude %}
 {% endblock %}
+{% block subjectScheme %}
+{% endblock %}
+{% block subjectUri %}
+{% endblock %}
+{% block valueUri %}
+{% endblock %}
+{% block classificationCode %}
+{% endblock %}
+{% block subject %}
+{% endblock %}
 
 #}
